added columns to track

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -3019,10 +3019,426 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area_fips</th>\n",
+       "      <th>own_code</th>\n",
+       "      <th>industry_code</th>\n",
+       "      <th>agglvl_code</th>\n",
+       "      <th>size_code</th>\n",
+       "      <th>year</th>\n",
+       "      <th>qtr</th>\n",
+       "      <th>disclosure_code</th>\n",
+       "      <th>qtrly_estabs</th>\n",
+       "      <th>month1_emplvl</th>\n",
+       "      <th>month2_emplvl</th>\n",
+       "      <th>month3_emplvl</th>\n",
+       "      <th>total_qtrly_wages</th>\n",
+       "      <th>taxable_qtrly_wages</th>\n",
+       "      <th>qtrly_contributions</th>\n",
+       "      <th>avg_wkly_wage</th>\n",
+       "      <th>lq_disclosure_code</th>\n",
+       "      <th>lq_qtrly_estabs</th>\n",
+       "      <th>lq_month1_emplvl</th>\n",
+       "      <th>lq_month2_emplvl</th>\n",
+       "      <th>lq_month3_emplvl</th>\n",
+       "      <th>lq_total_qtrly_wages</th>\n",
+       "      <th>lq_taxable_qtrly_wages</th>\n",
+       "      <th>lq_qtrly_contributions</th>\n",
+       "      <th>lq_avg_wkly_wage</th>\n",
+       "      <th>oty_disclosure_code</th>\n",
+       "      <th>oty_qtrly_estabs_chg</th>\n",
+       "      <th>oty_qtrly_estabs_pct_chg</th>\n",
+       "      <th>oty_month1_emplvl_chg</th>\n",
+       "      <th>oty_month1_emplvl_pct_chg</th>\n",
+       "      <th>oty_month2_emplvl_chg</th>\n",
+       "      <th>oty_month2_emplvl_pct_chg</th>\n",
+       "      <th>oty_month3_emplvl_chg</th>\n",
+       "      <th>oty_month3_emplvl_pct_chg</th>\n",
+       "      <th>oty_total_qtrly_wages_chg</th>\n",
+       "      <th>oty_total_qtrly_wages_pct_chg</th>\n",
+       "      <th>oty_taxable_qtrly_wages_chg</th>\n",
+       "      <th>oty_taxable_qtrly_wages_pct_chg</th>\n",
+       "      <th>oty_qtrly_contributions_chg</th>\n",
+       "      <th>oty_qtrly_contributions_pct_chg</th>\n",
+       "      <th>oty_avg_wkly_wage_chg</th>\n",
+       "      <th>oty_avg_wkly_wage_pct_chg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>127988</td>\n",
+       "      <td>1956476</td>\n",
+       "      <td>1969122</td>\n",
+       "      <td>1977658</td>\n",
+       "      <td>24160364990</td>\n",
+       "      <td>9849675204</td>\n",
+       "      <td>119169491</td>\n",
+       "      <td>944</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2353</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>35545</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>32977</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>30223</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>1004646638</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>319152400</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>-5218828</td>\n",
+       "      <td>-4.2</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>129541</td>\n",
+       "      <td>1988655</td>\n",
+       "      <td>1994384</td>\n",
+       "      <td>1996581</td>\n",
+       "      <td>23576562606</td>\n",
+       "      <td>2588522394</td>\n",
+       "      <td>32388053</td>\n",
+       "      <td>910</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3162</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>30587</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>31983</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>24604</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1069251441</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>-1131343</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1846192</td>\n",
+       "      <td>-5.4</td>\n",
+       "      <td>29</td>\n",
+       "      <td>3.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>130945</td>\n",
+       "      <td>1985355</td>\n",
+       "      <td>1992827</td>\n",
+       "      <td>1989525</td>\n",
+       "      <td>23766427185</td>\n",
+       "      <td>1746589241</td>\n",
+       "      <td>22396887</td>\n",
+       "      <td>919</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3453</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>28727</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>28502</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>22417</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1193287670</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>24584731</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>-1553116</td>\n",
+       "      <td>-6.5</td>\n",
+       "      <td>34</td>\n",
+       "      <td>3.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1216</td>\n",
+       "      <td>53337</td>\n",
+       "      <td>53588</td>\n",
+       "      <td>53497</td>\n",
+       "      <td>1106955506</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1592</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.61</td>\n",
+       "      <td>1.42</td>\n",
+       "      <td>1.42</td>\n",
+       "      <td>1.42</td>\n",
+       "      <td>1.86</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.31</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>791</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1024</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>921</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>54267702</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>3.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1217</td>\n",
+       "      <td>53600</td>\n",
+       "      <td>53690</td>\n",
+       "      <td>53928</td>\n",
+       "      <td>1121140925</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1605</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.61</td>\n",
+       "      <td>1.42</td>\n",
+       "      <td>1.42</td>\n",
+       "      <td>1.42</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.18</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>916</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>1114</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>1061</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>45900699</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>2.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  area_fips  own_code industry_code  agglvl_code  size_code  year  qtr  \\\n",
+       "0      1000         0            10           50          0  2019    1   \n",
+       "1      1000         0            10           50          0  2019    2   \n",
+       "2      1000         0            10           50          0  2019    3   \n",
+       "3      1000         1            10           51          0  2019    1   \n",
+       "4      1000         1            10           51          0  2019    2   \n",
+       "\n",
+       "  disclosure_code  qtrly_estabs  month1_emplvl  month2_emplvl  month3_emplvl  \\\n",
+       "0             NaN        127988        1956476        1969122        1977658   \n",
+       "1             NaN        129541        1988655        1994384        1996581   \n",
+       "2             NaN        130945        1985355        1992827        1989525   \n",
+       "3             NaN          1216          53337          53588          53497   \n",
+       "4             NaN          1217          53600          53690          53928   \n",
+       "\n",
+       "   total_qtrly_wages  taxable_qtrly_wages  qtrly_contributions  avg_wkly_wage  \\\n",
+       "0        24160364990           9849675204            119169491            944   \n",
+       "1        23576562606           2588522394             32388053            910   \n",
+       "2        23766427185           1746589241             22396887            919   \n",
+       "3         1106955506                    0                    0           1592   \n",
+       "4         1121140925                    0                    0           1605   \n",
+       "\n",
+       "  lq_disclosure_code  lq_qtrly_estabs  lq_month1_emplvl  lq_month2_emplvl  \\\n",
+       "0                NaN             1.00              1.00              1.00   \n",
+       "1                NaN             1.00              1.00              1.00   \n",
+       "2                NaN             1.00              1.00              1.00   \n",
+       "3                NaN             1.61              1.42              1.42   \n",
+       "4                NaN             1.61              1.42              1.42   \n",
+       "\n",
+       "   lq_month3_emplvl  lq_total_qtrly_wages  lq_taxable_qtrly_wages  \\\n",
+       "0              1.00                  1.00                     1.0   \n",
+       "1              1.00                  1.00                     1.0   \n",
+       "2              1.00                  1.00                     1.0   \n",
+       "3              1.42                  1.86                     0.0   \n",
+       "4              1.42                  1.68                     0.0   \n",
+       "\n",
+       "   lq_qtrly_contributions  lq_avg_wkly_wage oty_disclosure_code  \\\n",
+       "0                     1.0              1.00                 NaN   \n",
+       "1                     1.0              1.00                 NaN   \n",
+       "2                     1.0              1.00                 NaN   \n",
+       "3                     0.0              1.31                 NaN   \n",
+       "4                     0.0              1.18                 NaN   \n",
+       "\n",
+       "   oty_qtrly_estabs_chg  oty_qtrly_estabs_pct_chg  oty_month1_emplvl_chg  \\\n",
+       "0                  2353                       1.9                  35545   \n",
+       "1                  3162                       2.5                  30587   \n",
+       "2                  3453                       2.7                  28727   \n",
+       "3                    24                       2.0                    791   \n",
+       "4                    22                       1.8                    916   \n",
+       "\n",
+       "   oty_month1_emplvl_pct_chg  oty_month2_emplvl_chg  \\\n",
+       "0                        1.9                  32977   \n",
+       "1                        1.6                  31983   \n",
+       "2                        1.5                  28502   \n",
+       "3                        1.5                   1024   \n",
+       "4                        1.7                   1114   \n",
+       "\n",
+       "   oty_month2_emplvl_pct_chg  oty_month3_emplvl_chg  \\\n",
+       "0                        1.7                  30223   \n",
+       "1                        1.6                  24604   \n",
+       "2                        1.5                  22417   \n",
+       "3                        1.9                    921   \n",
+       "4                        2.1                   1061   \n",
+       "\n",
+       "   oty_month3_emplvl_pct_chg  oty_total_qtrly_wages_chg  \\\n",
+       "0                        1.6                 1004646638   \n",
+       "1                        1.2                 1069251441   \n",
+       "2                        1.1                 1193287670   \n",
+       "3                        1.8                   54267702   \n",
+       "4                        2.0                   45900699   \n",
+       "\n",
+       "   oty_total_qtrly_wages_pct_chg  oty_taxable_qtrly_wages_chg  \\\n",
+       "0                            4.3                    319152400   \n",
+       "1                            4.8                     -1131343   \n",
+       "2                            5.3                     24584731   \n",
+       "3                            5.2                            0   \n",
+       "4                            4.3                            0   \n",
+       "\n",
+       "   oty_taxable_qtrly_wages_pct_chg  oty_qtrly_contributions_chg  \\\n",
+       "0                              3.3                     -5218828   \n",
+       "1                              0.0                     -1846192   \n",
+       "2                              1.4                     -1553116   \n",
+       "3                              0.0                            0   \n",
+       "4                              0.0                            0   \n",
+       "\n",
+       "   oty_qtrly_contributions_pct_chg  oty_avg_wkly_wage_chg  \\\n",
+       "0                             -4.2                     23   \n",
+       "1                             -5.4                     29   \n",
+       "2                             -6.5                     34   \n",
+       "3                              0.0                     51   \n",
+       "4                              0.0                     36   \n",
+       "\n",
+       "   oty_avg_wkly_wage_pct_chg  \n",
+       "0                        2.5  \n",
+       "1                        3.3  \n",
+       "2                        3.8  \n",
+       "3                        3.3  \n",
+       "4                        2.3  "
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_EmploymentData.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Columns to track\n",
+    "fipsColumn = \"area_fips\"\n",
+    "industryCodeColumn = \"industry_code\"\n",
+    "nEstabColumn = \"qtrly_estabs\"\n",
+    "nEmployeesColumn = \"month3_emplvl\"\n",
+    "locationQuotientNEmployeesColumn = \"lq_month3_emplvl\""
+   ]
   },
   {
    "cell_type": "code",
