--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -2863,16 +2863,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_BLSIndustries = pd.read_excel(excel_BLSIndustries)"
+    "df_BLSIndustries = pd.read_excel(excel_BLSIndustries) # https://data.bls.gov/cew/doc/titles/industry/industry_titles.htm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -2990,7 +2990,7 @@
        "[100 rows x 3 columns]"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3446,7 +3446,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# {Code:Industry Title} https://data.bls.gov/cew/doc/titles/industry/industry_titles.htm\n",
+    "# {Code:Industry Title} \n",
     "NAICSCodesToExtract = {}"
    ]
   }
