added high level include data

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -2853,17 +2853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "excel_BLSIndustries = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\bls\\\\Copy of industry_titles.xlsx\"\n",
-    "csv_EmployementData2019Q1 = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\bls\\\\2019_qtrly_singlefile\\\\2019.q1-q3.singlefile.csv\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2872,7 +2862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -2899,121 +2889,15 @@
        "      <th>industry_code</th>\n",
        "      <th>industry_title</th>\n",
        "      <th>Include</th>\n",
+       "      <th>High Level Include</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1012</td>\n",
-       "      <td>1012 Construction</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1013</td>\n",
-       "      <td>1013 Manufacturing</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1021</td>\n",
-       "      <td>1021 Trade, transportation, and utilities</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>22</td>\n",
-       "      <td>NAICS 22 Utilities</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>221</td>\n",
-       "      <td>NAICS 221 Utilities</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
        "      <td>2211</td>\n",
        "      <td>NAICS 2211 Power generation and supply</td>\n",
        "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200</th>\n",
-       "      <td>22111</td>\n",
-       "      <td>NAICS 22111 Electric power generation</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201</th>\n",
-       "      <td>221111</td>\n",
-       "      <td>NAICS 221111 Hydroelectric power generation</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>202</th>\n",
-       "      <td>221112</td>\n",
-       "      <td>NAICS 221112 Fossil fuel electric power genera...</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>203</th>\n",
-       "      <td>221113</td>\n",
-       "      <td>NAICS 221113 Nuclear electric power generation</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>204</th>\n",
-       "      <td>221114</td>\n",
-       "      <td>NAICS 221114 Solar electric power generation</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>205</th>\n",
-       "      <td>221115</td>\n",
-       "      <td>NAICS 221115 Wind electric power generation</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>206</th>\n",
-       "      <td>221116</td>\n",
-       "      <td>NAICS 221116 Geothermal electric power generation</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>207</th>\n",
-       "      <td>221117</td>\n",
-       "      <td>NAICS 221117 Biomass electric power generation</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>208</th>\n",
-       "      <td>221118</td>\n",
-       "      <td>NAICS 221118 Other electric power generation</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>209</th>\n",
-       "      <td>221119</td>\n",
-       "      <td>NAICS07 221119 Other electric power generation</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>210</th>\n",
-       "      <td>22112</td>\n",
-       "      <td>NAICS 22112 Electric power transmission and di...</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>211</th>\n",
-       "      <td>221121</td>\n",
-       "      <td>NAICS 221121 Electric bulk power transmission ...</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>212</th>\n",
-       "      <td>221122</td>\n",
-       "      <td>NAICS 221122 Electric power distribution</td>\n",
        "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3021,42 +2905,110 @@
        "      <td>2212</td>\n",
        "      <td>NAICS 2212 Natural gas distribution</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216</th>\n",
+       "      <td>2213</td>\n",
+       "      <td>NAICS 2213 Water, sewage and other systems</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>217</th>\n",
+       "      <td>22131</td>\n",
+       "      <td>NAICS 22131 Water supply and irrigation systems</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219</th>\n",
+       "      <td>22132</td>\n",
+       "      <td>NAICS 22132 Sewage treatment facilities</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>238</th>\n",
+       "      <td>23711</td>\n",
+       "      <td>NAICS 23711 Water and sewer system construction</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>23712</td>\n",
+       "      <td>NAICS 23712 Oil and gas pipeline construction</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242</th>\n",
+       "      <td>23713</td>\n",
+       "      <td>NAICS 23713 Power and communication system con...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247</th>\n",
+       "      <td>2373</td>\n",
+       "      <td>NAICS 2373 Highway, street, and bridge constru...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2460</th>\n",
+       "      <td>92411</td>\n",
+       "      <td>NAICS 92411 Air, water, and waste program admi...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2476</th>\n",
+       "      <td>92613</td>\n",
+       "      <td>NAICS 92613 Utility regulation and administration</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    industry_code                                     industry_title Include\n",
-       "3            1012                                  1012 Construction     Yes\n",
-       "4            1013                                 1013 Manufacturing     Yes\n",
-       "6            1021          1021 Trade, transportation, and utilities     Yes\n",
-       "197            22                                 NAICS 22 Utilities     Yes\n",
-       "198           221                                NAICS 221 Utilities     Yes\n",
-       "199          2211             NAICS 2211 Power generation and supply     Yes\n",
-       "200         22111              NAICS 22111 Electric power generation     Yes\n",
-       "201        221111        NAICS 221111 Hydroelectric power generation     Yes\n",
-       "202        221112  NAICS 221112 Fossil fuel electric power genera...     Yes\n",
-       "203        221113     NAICS 221113 Nuclear electric power generation     Yes\n",
-       "204        221114       NAICS 221114 Solar electric power generation     Yes\n",
-       "205        221115        NAICS 221115 Wind electric power generation     Yes\n",
-       "206        221116  NAICS 221116 Geothermal electric power generation     Yes\n",
-       "207        221117     NAICS 221117 Biomass electric power generation     Yes\n",
-       "208        221118       NAICS 221118 Other electric power generation     Yes\n",
-       "209        221119     NAICS07 221119 Other electric power generation     Yes\n",
-       "210         22112  NAICS 22112 Electric power transmission and di...     Yes\n",
-       "211        221121  NAICS 221121 Electric bulk power transmission ...     Yes\n",
-       "212        221122           NAICS 221122 Electric power distribution     Yes\n",
-       "213          2212                NAICS 2212 Natural gas distribution     Yes"
+       "     industry_code                                     industry_title Include  \\\n",
+       "199           2211             NAICS 2211 Power generation and supply     Yes   \n",
+       "213           2212                NAICS 2212 Natural gas distribution     Yes   \n",
+       "216           2213         NAICS 2213 Water, sewage and other systems     Yes   \n",
+       "217          22131    NAICS 22131 Water supply and irrigation systems     Yes   \n",
+       "219          22132            NAICS 22132 Sewage treatment facilities     Yes   \n",
+       "238          23711    NAICS 23711 Water and sewer system construction     Yes   \n",
+       "240          23712      NAICS 23712 Oil and gas pipeline construction     Yes   \n",
+       "242          23713  NAICS 23713 Power and communication system con...     Yes   \n",
+       "247           2373  NAICS 2373 Highway, street, and bridge constru...     Yes   \n",
+       "2460         92411  NAICS 92411 Air, water, and waste program admi...     Yes   \n",
+       "2476         92613  NAICS 92613 Utility regulation and administration     Yes   \n",
+       "\n",
+       "     High Level Include  \n",
+       "199                 Yes  \n",
+       "213                 Yes  \n",
+       "216                 Yes  \n",
+       "217                 Yes  \n",
+       "219                 Yes  \n",
+       "238                 Yes  \n",
+       "240                 Yes  \n",
+       "242                 Yes  \n",
+       "247                 Yes  \n",
+       "2460                Yes  \n",
+       "2476                Yes  "
       ]
      },
-     "execution_count": 231,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_BLSIndustries[df_BLSIndustries[\"Include\"]==\"Yes\"].head(20)"
+    "df_BLSIndustries[df_BLSIndustries[\"High Level Include\"]==\"Yes\"].head(20)"
    ]
   },
   {
