--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -2862,7 +2862,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_IndustriesToStartWith = df_BLSIndustries[df_BLSIndustries[\"High Level Include\"]==\"Yes\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -3002,13 +3011,13 @@
        "2476                Yes  "
       ]
      },
-     "execution_count": 240,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_BLSIndustries[df_BLSIndustries[\"High Level Include\"]==\"Yes\"].head(20)"
+    "df_IndustriesToStartWith"
    ]
   },
   {
