setting up to parse by industry

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -4242,6 +4242,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i,row in df_IndustriesToStartWith.iterrows():\n",
+    "    industry_code = row[\"industry_code\"]\n",
+    "    industry_title = row[\"industry_title\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
