subsetting by industry!!!

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -5034,22 +5034,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area_fips</th>\n",
+       "      <th>industry_code</th>\n",
+       "      <th>qtrly_estabs</th>\n",
+       "      <th>month3_emplvl</th>\n",
+       "      <th>lq_month3_emplvl</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>2211</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1477</td>\n",
+       "      <td>10.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>2211</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1480</td>\n",
+       "      <td>10.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>2211</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1489</td>\n",
+       "      <td>10.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1338</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>2211</td>\n",
+       "      <td>33</td>\n",
+       "      <td>2223</td>\n",
+       "      <td>2.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1339</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>2211</td>\n",
+       "      <td>33</td>\n",
+       "      <td>2289</td>\n",
+       "      <td>2.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10699057</th>\n",
+       "      <td>US000</td>\n",
+       "      <td>2211</td>\n",
+       "      <td>941</td>\n",
+       "      <td>77424</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10699058</th>\n",
+       "      <td>US000</td>\n",
+       "      <td>2211</td>\n",
+       "      <td>939</td>\n",
+       "      <td>76723</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10702806</th>\n",
+       "      <td>US000</td>\n",
+       "      <td>2211</td>\n",
+       "      <td>9805</td>\n",
+       "      <td>386988</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10702807</th>\n",
+       "      <td>US000</td>\n",
+       "      <td>2211</td>\n",
+       "      <td>9857</td>\n",
+       "      <td>388169</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10702808</th>\n",
+       "      <td>US000</td>\n",
+       "      <td>2211</td>\n",
+       "      <td>9924</td>\n",
+       "      <td>383490</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11442 rows × 5 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "2211"
+       "         area_fips industry_code  qtrly_estabs  month3_emplvl  \\\n",
+       "39            1000          2211            17           1477   \n",
+       "40            1000          2211            17           1480   \n",
+       "41            1000          2211            17           1489   \n",
+       "1338          1000          2211            33           2223   \n",
+       "1339          1000          2211            33           2289   \n",
+       "...            ...           ...           ...            ...   \n",
+       "10699057     US000          2211           941          77424   \n",
+       "10699058     US000          2211           939          76723   \n",
+       "10702806     US000          2211          9805         386988   \n",
+       "10702807     US000          2211          9857         388169   \n",
+       "10702808     US000          2211          9924         383490   \n",
+       "\n",
+       "          lq_month3_emplvl  \n",
+       "39                   10.23  \n",
+       "40                   10.31  \n",
+       "41                   10.45  \n",
+       "1338                  2.17  \n",
+       "1339                  2.21  \n",
+       "...                    ...  \n",
+       "10699057              1.00  \n",
+       "10699058              1.00  \n",
+       "10702806              1.00  \n",
+       "10702807              1.00  \n",
+       "10702808              1.00  \n",
+       "\n",
+       "[11442 rows x 5 columns]"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "industry_code"
+    "df_employment_industry_subset[[fipsColumn,industryCodeColumn,nEstabColumn,nEmployeesColumn,locationQuotientNEmployeesColumn]]"
    ]
   },
   {
