adding 2018 annual data to see if more complete

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,8 @@
     "shp_USCounties = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\basemap\\\\tl_2017_us_county\\\\tl_2017_us_county.shp\"\n",
     "excel_StateFPCodes = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\basemap\\\\statefpcodes.xlsx\"\n",
     "excel_BLSIndustries = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\bls\\\\Copy of industry_titles.xlsx\"\n",
-    "csv_EmployementData2019Q1 = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\bls\\\\2019_qtrly_singlefile\\\\2019.q1-q3.singlefile.csv\""
+    "csv_EmployementData2019Q1 = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\bls\\\\2019_qtrly_singlefile\\\\2019.q1-q3.singlefile.csv\"\n",
+    "csv_EmploymentData2018 = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\bls\\\\2018_annual_singlefile\\\\2018.annual.singlefile.csv\""
    ]
   },
   {
