setting up loop to plot

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -4164,13 +4164,17 @@
     }
    ],
    "source": [
-    "fig,ax = plt.subplots(figsize=(50,20))\n",
-    "divider = make_axes_locatable(ax)\n",
-    "cax = divider.append_axes(\"right\", size=\"5%\", pad=0.1)\n",
-    "gdf_USCountyWaterSupplies.cx[-125:-50, 20:70].plot(\"NAICS 2211 Power generation and supply_month3_emplvl\",\n",
-    "                                                   ax=ax,cax=cax,legend=\"True\",cmap=\"YlOrRd\",\n",
-    "                                                  legend_kwds={'label': \"Staff by County\"})\n",
-    "ax.set_title(\"CONUS water and wastewater supply staff\")"
+    "for i,row in df_IndustriesToStartWith.iterrows():\n",
+    "    industry_code = row[\"industry_code\"]\n",
+    "    industry_title = row[\"industry_title\"]\n",
+    "    fig,ax = plt.subplots(figsize=(50,20))\n",
+    "    divider = make_axes_locatable(ax)\n",
+    "    cax = divider.append_axes(\"right\", size=\"5%\", pad=0.1)\n",
+    "    columnToPlot = f\"{industry_title}_{nEmployeesColumn}\"\n",
+    "    gdf_USCountyWaterSupplies.cx[-125:-50, 20:70].plot(\"NAICS 2211 Power generation and supply_month3_emplvl\",\n",
+    "                                                       ax=ax,cax=cax,legend=\"True\",cmap=\"YlOrRd\",\n",
+    "                                                      legend_kwds={'label': \"Staff by County\"})\n",
+    "    ax.set_title(\"CONUS water and wastewater supply staff\")"
    ]
   },
   {
