--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -36,7 +36,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
   },
   {
    "cell_type": "markdown",
